transmission/transmission-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: linuxserver/transmission
        ports:
          - containerPort: 9091
          - containerPort: 51413
            protocol: UDP
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
      volumes:
      - name: config
        hostPath:
          path: /mnt/share/container_volumes/transmission_config
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads/transmission
